# firmware-nordic-nrf7002dk

./: .gitignore  CMakeLists.txt  Kconfig  README.md  prj.conf
boards/: nrf7002dk_nrf5340_cpuapp.conf  nrf7002dk_nrf5340_cpuapp.overlay
child_image/: mcuboot.conf
firmware-sdk/: ei_device_lib.cpp
src/: CMakeLists.txt  ei_at_handlers.cpp  ei_at_handlers.h  ei_base64_encode.cpp  ei_base64_encode.h  ei_device_nordic_nrf7002dk.cpp  ei_device_nordic_nrf7002dk.h  ei_fusion_sensors_config.h  ei_sampler.cpp  ei_sampler.h  flash_memory.cpp  flash_memory.h  main.cpp
src/inference/: ei_run_fusion_impulse.cpp  ei_run_impulse.h
src/sensors/: CMakeLists.txt  ei_inertial_sensor.cpp  ei_inertial_sensor.h
src/wifi/: CMakeLists.txt  ei_ws_client.cpp  ei_ws_client.h  wifi.cpp  wifi.h
